--- a/styles/style.css
+++ b/styles/style.css
@@ -358,7 +358,7 @@ main {
 }
 
 .place-content {
-    border: 1px solid red;
+    border: none;
     width: 573px;
     height: 424px;
 
@@ -394,7 +394,7 @@ main {
 }
 
 .place-image {
-    border: solid red;
+    border: none;
     width: 573px;
     height: 424px;
     position: relative;
@@ -411,4 +411,122 @@ main {
     font-size: 20px;
     font-weight: 800;
 
+}
+
+/* newsletter section style  */
+
+.newsletter {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 50px;
+
+
+}
+
+.newsletter-content {
+    border: none;
+    width: 450px;
+    height: 422px;
+
+}
+
+.news-title {
+    margin-top: 40px;
+    margin-left: 40px;
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.news-pera {
+    margin-top: 16px;
+    margin-left: 40px;
+    width: 350px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+hr {
+    margin-left: 40px;
+    width: 393px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+}
+
+
+
+
+input {
+    margin-top: 16px;
+    margin-left: 40px;
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    gap: 16px;
+
+}
+
+.subscribe {
+    margin-top: 38px;
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    margin-left: 40px;
+
+}
+.newsletter-bgimg {
+    border: none;
+    width: 672px;
+    height: 422px;
+    background: url("../Images/Rectangle\ 8.png") lightgray 50% / cover no-repeat;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+    position: relative;
+
+}
+.save-button-border{
+    border: none;
+    margin-top: 200px;
+    margin-left: 327px;
+    margin-right: 0%;
+    margin-bottom: 0%;
+    background: none;
+}
+.save-button {
+    width: 324px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    background: #FF5400;
+    
+
+}
+
+.btnsix-title {
+ 
+    transform: rotate(-1.628deg);
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 0%;
+}
+
+.btnone-title {
+    text-align: center;
+    margin-top: 0%;
+    transform: rotate(-1.628deg);
+    color: #FFF;
+    font-size: 32px;
+    font-weight: 800;
+    
 }
