--- a/styles/style.css
+++ b/styles/style.css
@@ -483,6 +483,7 @@ input {
     margin-left: 40px;
 
 }
+
 .newsletter-bgimg {
     border: none;
     width: 672px;
@@ -493,7 +494,8 @@ input {
     position: relative;
 
 }
-.save-button-border{
+
+.save-button-border {
     border: none;
     margin-top: 200px;
     margin-left: 327px;
@@ -501,18 +503,19 @@ input {
     margin-bottom: 0%;
     background: none;
 }
+
 .save-button {
     width: 324px;
     height: 120px;
     transform: rotate(-19.628deg);
     border-radius: 16px;
     background: #FF5400;
-    
+
 
 }
 
 .btnsix-title {
- 
+
     transform: rotate(-1.628deg);
     color: #FFF;
     text-align: center;
@@ -528,5 +531,64 @@ input {
     color: #FFF;
     font-size: 32px;
     font-weight: 800;
-    
+
+}
+
+/* earth-footer style  */
+
+.earth-footer {
+    margin-left: 175px;
+    margin-top: 50px;
+    border: none;
+    width: 1380px;
+    height: 400px;
+    background: rgba(19, 19, 24, 0.05);
+
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 110px;
+    margin-left: 400px;
+    margin-bottom: 0px;
+}
+
+.footer-pera {
+    margin-top: 0%;
+    width: 769px;
+    color: #5A5A5D;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-left: 300px;
+    margin-right: 135px;
+}
+
+.footer-icons {
+    margin-top: 50px;
+    margin-left: 500px;
+    text-align: center;
+    font-size: 2rem;
+    width: 274px;
+    height: 30px;
+}
+
+.hr-line {
+    margin-top: 50px;
+    margin-left: 300px;
+    width: 872px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+}
+
+.rights {
+    margin-top: 100px;
+    margin-left: 600px;
+    color: #131318;
+    font-size: 16px;
+    font-weight: 300;
+
 }
