--- a/styles/style.css
+++ b/styles/style.css
@@ -160,9 +160,10 @@ main {
     justify-content: space-between;
     margin-top: 100px;
 }
-.tours-content{
-    border: 1px solid red;
-    width: 600px;
+
+.tours-content {
+    border: none;
+    width: 500px;
     height: 550px;
 }
 
@@ -174,19 +175,19 @@ main {
     margin-bottom: 0%;
 
 }
-}
 
-.tours-pera li{
+
+.tours-pera li {
     margin-top: 0%;
     margin-right: 20%;
     font-size: 1rem;
     color: #5A5A5D;
     font-weight: 400;
-   
+
 }
 
 .tours-img-container {
-    border: 1px solid red;
+    border: none;
     border-radius: 16px;
     background: lightgray 50% / cover no-repeat;
     width: 540px;
@@ -200,11 +201,12 @@ main {
     border: none;
     border-radius: 8px;
     margin-top: 20%;
-    
+
 }
 
 /* destination tours styls */
 .destination-title {
+    margin-top: 100px;
     color: #131318;
     text-align: center;
     font-size: 40px;
@@ -287,6 +289,11 @@ main {
     width: 673px;
     height: 300px;
     position: relative;
+
+}
+
+.centerr {
+    position: absolute;
 
 }
 
@@ -713,45 +720,142 @@ hr {
     }
 
     /* our popular tours section  */
-        .tours-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-    
-        .tours-content {
-            border: 1px solid red;
-            width: 376px;
-            
-        }
-    
-        .tours-title {
-            font-size: 20px;
-    
-        }
-        .tours-pera li {
-            margin-top: 0%;
-            margin-right: 10%;
-            font-size: 14px;
-            
-    
-        }
-    
-        .tours-img-container {
-           
-            background: lightgray 50% / cover no-repeat;
-            width: 335px;
-            height: 342px;
-        }
-    
-        .read {
-            padding: 14px;
-            width: 174px;
-            height: 52px;
-           
-    
-        }
+    .tours-container {
+        display: flex;
+        flex-direction: column;
+
+        margin-top: 10px;
+    }
+
+    .tours-content {
+        margin-top: 50px;
+        border: none;
+        width: 376px;
+
+    }
+
+    .tours-title {
+        font-size: 20px;
+
+    }
+
+    .tours-pera li {
+        margin-top: 0%;
+        margin-right: 10%;
+        font-size: 14px;
+
+
+    }
+
+    .tours-img-container {
+        width: 335px;
+        height: 300px;
+    }
+
+    .read {
+        padding: 14px;
+        width: 174px;
+        height: 52px;
+
+
+    }
+    main{
+        margin-left: 20px;
+        margin-right: 20px;
+
+    }
+
+    /* image gallery section  */
+    .destination-title {
+        margin-top: 300px;
+        text-align: center;
+        font-size: 20px;
+
+
+    }
+
+    .choose-pera {
+        margin-top: 20px;
+        margin-left: 5px;
+        margin-right: 5px;
+        font-size: 14px;
+        line-height: 24px;
+
+    }
+
+    .rowone {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        
+        
+
+
+    }
+
+    .first-imgrow {
+        border: none;
+        width: 335px;
+        height: 300px;
+        position: relative;
+    }
+
+    .rowtwo,
+    .thirdrow {
+        margin-top: 24px;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+
+    }
+
+    .secondrow-one {
+        border: none;
+        width: 374px;
+        height: 286px;
+        position: relative;
+    }
+
+    .secondrwo-two {
+        border: none;
+        width: 474px;
+        height: 286px;
+        position: relative;
+    }
+
+    .secondrwo-three {
+        border: none;
+        width: 274px;
+        height: 286px;
+        position: relative;
+    }
+
+
+
+    .thirdrow-one {
+        border: none;
+        width: 473px;
+        height: 300px;
+        position: relative;
+
+    }
+
+    .thirdrow-two {
+        border: none;
+        width: 673px;
+        height: 300px;
+        position: relative;
+
+    }
+
+    .center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 28px;
+        color: #FFF;
+    }
 
 
 }
-
