--- a/styles/style.css
+++ b/styles/style.css
@@ -347,12 +347,11 @@ main {
     height: 284px;
 }
 
-/* .fa-solid {
-    
+.hotel-img {
     font-size: 20px;
     color: orange;
 
-} */
+}
 
 .fa-map-location {
     font-size: 64px;
@@ -391,6 +390,20 @@ main {
     font-weight: 400;
     line-height: 26px;
 
+}
+
+/* see-button  */
+
+.see-button {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    width: 210px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    margin: 100px 630px;
 }
 
 
@@ -759,7 +772,8 @@ hr {
 
 
     }
-    main{
+
+    main {
         margin-left: 20px;
         margin-right: 20px;
 
@@ -787,8 +801,8 @@ hr {
         display: flex;
         flex-direction: column;
         gap: 16px;
-        
-        
+
+
 
 
     }
@@ -842,20 +856,137 @@ hr {
 
     .thirdrow-two {
         border: none;
-        width: 673px;
+        width: 373px;
         height: 300px;
         position: relative;
 
     }
 
-    .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 28px;
-        color: #FFF;
+    /* Why Choose Us section  */
+    .choose-content {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
     }
+
+    .hotel {
+
+        width: 335px;
+        height: 289px;
+
+
+    }
+
+    .hotel-img {
+        margin-top: 16px;
+        margin-left: 16px;
+        border: none;
+        width: 48px;
+        height: 46px;
+    }
+
+    .fas {
+        font-size: 20px;
+
+
+    }
+
+    .service {
+
+        width: 335px;
+        height: 289px;
+    }
+
+    .hotel-img {
+        font-size: 20px;
+        color: orange;
+
+    }
+
+    .fa-map-location {
+        font-size: 48px;
+
+    }
+
+    .Guarantee {
+
+        width: 335px;
+        height: 289px;
+        margin-left: 30px;
+
+    }
+
+    .hotel-title {
+        margin-right: 80px;
+
+
+    }
+
+    .hotel-pera {
+        width: 271px;
+        font-size: 14px;
+    }
+
+    .hotel-pera {
+        width: 271px;
+        font-size: 14px;
+
+    }
+    .see-button{
+        margin: 30px 30px;
+    }
+    /* a simple perfect place  */
+        .place-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+    
+        .place-content {
+            border: none;
+            width: 373px;
+            height: 424px;
+    
+    
+        }
+    
+        .place-title {
+            
+            width: 248px;
+            font-size: 20px;
+           
+    
+        }
+    
+        .place-pera {
+            width: 332px;
+            font-size: 14px;
+    
+        }
+    
+        .place-list {
+            width: 318px;
+            font-size: 14px;
+    
+        }
+    
+        .place-image {
+            width: 335px;
+            height: 200px;   
+            margin: 150px;
+    
+        }
+    
+        .see-more {
+            width: 174px;
+            height: 52px;
+            font-size: 18px;
+           
+    
+        }
+
+
 
 
 }
