--- a/styles/style.css
+++ b/styles/style.css
@@ -520,7 +520,7 @@ hr {
 
 
 
-/* input {
+.news-form input {
     margin-top: 16px;
     margin-left: 40px;
     width: 393px;
@@ -529,7 +529,7 @@ hr {
     background: rgba(19, 19, 24, 0.05);
     gap: 16px;
 
-} */
+}
 
 .subscribe {
     margin-top: 38px;
@@ -932,59 +932,139 @@ hr {
         font-size: 14px;
 
     }
-    .see-button{
+
+    .see-button {
         margin: 30px 30px;
     }
+
     /* a simple perfect place  */
-        .place-section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-    
-        .place-content {
-            border: none;
-            width: 373px;
-            height: 424px;
-    
-    
-        }
-    
-        .place-title {
-            
-            width: 248px;
-            font-size: 20px;
-           
-    
-        }
-    
-        .place-pera {
-            width: 332px;
-            font-size: 14px;
-    
-        }
-    
-        .place-list {
-            width: 318px;
-            font-size: 14px;
-    
-        }
-    
-        .place-image {
-            width: 335px;
-            height: 200px;   
-            margin: 150px;
-    
-        }
-    
-        .see-more {
-            width: 174px;
-            height: 52px;
-            font-size: 18px;
-           
-    
-        }
+    .place-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .place-content {
+        border: none;
+        width: 373px;
+        height: 424px;
+
+
+    }
+
+    .place-title {
+
+        width: 248px;
+        font-size: 20px;
+
+
+    }
+
+    .place-pera {
+        width: 332px;
+        font-size: 14px;
+
+    }
+
+    .place-list {
+        width: 318px;
+        font-size: 14px;
+
+    }
+
+    .place-image {
+        width: 335px;
+        height: 200px;
+        margin: 150px;
+
+    }
+
+    .see-more {
+        width: 174px;
+        height: 52px;
+        font-size: 18px;
+
+
+    }
+
+    /* newslatter section  */
+    .newsletter {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-top: 100px;
+
+
+    }
+
+    .newsletter-content {
+        width: 350px;
+        
+
+    }
+    hr {
+        width: 288px;
+    }
+
+
+    .news-pera {
+        width: 288px;
+    }
+    .news-form input {
+        margin-top: 16px;
+        width: 288px;
+        height: 52px;
+        border-radius: 8px;
+        
+    }
+
+    .subscribe {
+        margin-top: 38px;
+        width: 288px;
+        height: 52px;
+        
+    }
+
+    .newsletter-bgimg {
+        border: none;
+        width: 335px;
+        height: 300px;
+        background: url("../Images/Rectangle\ 8.png") lightgray 50% / cover no-repeat;
+        background-repeat: no-repeat;
+        border-radius: 16px;
+        position: relative;
+
+    }
+
+    .save-button-border {
+        border: none;
+        margin-top: 120px;
+        margin-left: 100px;
+        margin-right: 0%;
+        margin-bottom: 0%;
+        background: none;
+    }
+
+    .save-button {
+        width: 200px;
+        height: 80px;
+        
+    }
+
+    .btnsix-title {
+        margin-top: 50px;
+
+        font-size: 14px;
+       
+    }
+
+    .btnone-title {
+        
+        font-size: 20px;
+       
+
+    }
 
 
 
