--- a/styles/style.css
+++ b/styles/style.css
@@ -1063,8 +1063,67 @@ hr {
         
         font-size: 20px;
        
-
     }
+    /* footer section  */
+
+        .earth-footer {
+            margin-left: 20px;
+            margin-top: 50px;
+            width: 400px;
+            height: 309px;
+            
+    
+        }
+        .footer-content img{
+            width: 28px;
+            height: 33px;
+
+        }
+    
+        .footer-content {
+            display: flex;
+            justify-content: center;
+            margin-top: 110px;
+            margin-left: 40px;
+            margin-bottom: 0px;
+        }
+        .footer-titlle{
+            font-size: 20px;
+        }
+    
+        .footer-pera {
+            margin-top: 0%;
+            width: 288px;
+            text-align: center;
+            font-size: 14px;
+            margin-left: 30px;
+           
+        }
+    
+        .footer-icons {
+            margin-top: 0px;
+            margin-left: 50px;
+            text-align: center;
+            font-size: 1.5rem;
+            width: 274px;
+            height: 30px;
+        }
+    
+        .hr-line {
+            margin-top: 0px;   
+            width: 335px; 
+            margin-left: 10px;
+        }
+    
+        .rights {
+    
+            margin-top: 10px;
+            margin-left: 80px;
+            color: #131318;
+            font-size: 14px;
+            font-weight: 300;
+    
+        }
 
 
 
