--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
 }
 
 .nav-container {
-    border: none min-height: 20px;
+    border: none;
     display: flex;
     align-items: center;
     width: 50%;
@@ -124,7 +124,7 @@ main {
     display: inline-flex;
     justify-content: center;
     align-items: flex-start;
-    border: 1px solid red;
+    border: none;
     width: 816px;
     height: 84;
     border-radius: 8px;
@@ -179,7 +179,7 @@ main {
 
 .tours-pera li {
     margin-top: 0%;
-    margin-right: 20%;
+    margin-right: 20px;
     font-size: 1rem;
     color: #5A5A5D;
     font-weight: 400;
@@ -191,7 +191,8 @@ main {
     border-radius: 16px;
     background: lightgray 50% / cover no-repeat;
     width: 540px;
-    height: 550px;
+    height: 450px;
+    margin-right: 200px;
 }
 
 .read {
@@ -809,7 +810,7 @@ hr {
 
     .first-imgrow {
         border: none;
-        width: 335px;
+        width: 100%;
         height: 300px;
         position: relative;
     }
@@ -825,14 +826,14 @@ hr {
 
     .secondrow-one {
         border: none;
-        width: 374px;
+        width: 100%;
         height: 286px;
         position: relative;
     }
 
     .secondrwo-two {
         border: none;
-        width: 474px;
+        width: 100%;
         height: 286px;
         position: relative;
     }
@@ -856,7 +857,7 @@ hr {
 
     .thirdrow-two {
         border: none;
-        width: 373px;
+        width: 100%;
         height: 300px;
         position: relative;
 
@@ -949,16 +950,12 @@ hr {
         border: none;
         width: 373px;
         height: 424px;
-
-
     }
 
     .place-title {
 
         width: 248px;
         font-size: 20px;
-
-
     }
 
     .place-pera {
@@ -974,7 +971,7 @@ hr {
     }
 
     .place-image {
-        width: 335px;
+        width: 100%px;
         height: 200px;
         margin: 150px;
 
@@ -1054,13 +1051,9 @@ hr {
 
     .btnsix-title {
         margin-top: 50px;
-
-        font-size: 14px;
-       
+        font-size: 14px; 
     }
-
-    .btnone-title {
-        
+    .btnone-title {   
         font-size: 20px;
        
     }
