--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ main {
 }
 
 .banner-sit {
+    margin-left: 250px;
     color: #FFF;
     width: 675px;
     text-align: center;
@@ -100,23 +101,32 @@ main {
     font-weight: 400;
 }
 
-.banner-form {
-    width: 634px;
-    height: 84px;
-}
 
-.banner-form input {
-
-    display: inline-block;
-    justify-content: space-between;
+.find-btn-emt {
+    background: #FFF;
+    color: rgba(19, 19, 24, 0.50);
+    border: none;
+    width: 170px;
+    height: 52px;
+    padding: 16px 40px;
+    margin: auto;
     align-items: center;
     border-radius: 8px;
-    width: 160px;
-    height: 52px;
-    margin: 16px;
-    gap: 20px;
+
+
+}
+
+.find-btn-emr {
+    background: #FFF;
+    color: rgba(19, 19, 24, 0.50);
     border: none;
-    color: #FFF;
+    width: 170px;
+    height: 52px;
+    padding: 16px 40px;
+    margin: auto;
+    align-items: center;
+    border-radius: 8px;
+
 
 }
 
@@ -390,6 +400,99 @@ main {
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
+
+}
+
+/* deals & Discounts section  */
+
+.deals-imagesection {
+    margin-top: 50px;
+
+}
+
+.deals-tour-pul {
+    margin-top: 100px;
+    border: 1px solid rgb(244, 241, 241);
+    width: 1100px;
+    height: 500px;
+    border-radius: 16px;
+    background: url(../Images/Group\ 39.png), lightgray 50% / cover no-repeat;
+    background-repeat: no-repeat;
+
+}
+
+.deals-tour-bench {
+    margin-top: 30px;
+    border: 1px solid rgb(248, 242, 242);
+    width: 1100px;
+    height: 500px;
+    border-radius: 16px;
+    background: url(../Images/Group\ 40.png), lightgray 50% / cover no-repeat;
+    background-repeat: no-repeat;
+}
+
+.tour-times {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.icone-bg {
+    color: #FF5400;
+}
+
+.price {
+    color: #FF5400;
+    font-size: 20px;
+    font-weight: 800;
+    margin-left: 30px;
+
+}
+
+.btn-book {
+    width: 150px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    margin-left: 30px;
+
+
+}
+
+.discount-title {
+    border: 1px solid rgb(246, 240, 240);
+    margin: 56px 56px 56px 444px;
+    width: 589px;
+    height: 389px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+}
+
+.deals-tour-sata {
+    margin-top: 30px;
+    border: 1px solid rgb(239, 232, 232);
+    width: 1100px;
+    height: 500px;
+    border-radius: 16px;
+    background: url(../Images/Group\ 39.png), lightgray 50% / cover no-repeat;
+    background-repeat: no-repeat;
+}
+
+.discount-title-bench {
+    border: 1px solid rgb(247, 244, 244);
+    margin: 56px 56px 506px 56px;
+    width: 589px;
+    height: 389px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
 
 }
 
@@ -674,10 +777,27 @@ hr {
     }
 
     .items-container {
+        
         flex-direction: column;
         margin-left: 50px;
         gap: 20px;
     }
+
+    .nav-container img {
+        width: 28px;
+        height: 33px;
+    }
+
+    .earth-title,
+    .trv {
+        
+        font-size: 20px;
+        margin-left: 5px;
+        margin-right: 0px;
+
+
+    }
+
 
     .banner-section {
         width: 335px;
@@ -694,44 +814,44 @@ hr {
 
     .banner-sit {
         width: 304px;
+        margin-left: 30px;
         text-align: center;
         font-size: 14px;
     }
 
-    .banner-form {
-        width: 170px;
-        height: px;
-    }
 
-    .banner-form input {
-
-        display: inline-block;
-        justify-content: space-between;
-        align-items: center;
+    .find-btn-emt {
         width: 255px;
         height: 52px;
+        padding: 16px 40px;
 
     }
 
-    .outer {
-        margin: 16px;
-        display: inline-flex;
-        justify-content: center;
-        align-items: flex-start;
-        width: 287px;
-        height: 306px;
-        gap: 10px;
-
+    .find-btn-emr {
+        width: 255px;
+        height: 52px;
+        margin-top: 16px;
     }
 
     .find {
         align-items: center;
         margin-left: 0px;
-        margin-top: 250px;
+        margin-top: 16px;
         width: 255px;
         height: 52px;
+    }
+
+    .outer {
+        margin: 16px;
+        display: inline-block;
+        justify-content: center;
+        align-items: center;
+        width: 287px;
+        height: 306px;
+
 
     }
+
 
     /* our popular tours section  */
     .tours-container {
@@ -938,6 +1058,86 @@ hr {
         margin: 30px 30px;
     }
 
+
+    /* deals & Discounts section  */
+
+    .deals-imagesection {
+        margin-top: 50px;
+
+    }
+
+    .deals-tour-pul {
+        margin-top: 100px;
+        border: 1px solid rgb(244, 241, 241);
+        width: 335px;
+
+
+
+    }
+
+    .deals-tour-bench {
+        margin-top: 30px;
+        border: 1px solid rgb(248, 242, 242);
+        width: 335px;
+    }
+
+    .tour-times {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .icone-bg {
+        color: #FF5400;
+    }
+
+    .price {
+        color: #FF5400;
+        font-size: 20px;
+        font-weight: 800;
+        margin-left: 30px;
+
+    }
+
+    .btn-book {
+        width: 150px;
+        height: 52px;
+        border-radius: 8px;
+        background: #FF5400;
+        color: #FFF;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 800;
+        margin-left: 30px;
+
+
+    }
+
+    .discount-title {
+        border: 1px solid rgb(246, 240, 240);
+        margin: 70px 20px 20px 20px;
+        width: 303px;
+        height: 389px;
+        border-radius: 16px;
+        border: 2px solid #FFF;
+        background: rgba(255, 255, 255, 0.80);
+        backdrop-filter: blur(2.5px);
+    }
+
+    .deals-tour-sata {
+        margin-top: 30px;
+        border: 1px solid rgb(239, 232, 232);
+        width: 335px;
+    }
+
+    .discount-title-bench {
+        border: 1px solid rgb(247, 244, 244);
+        margin: 70px 20px 20px 20px;
+        width: 303px;
+
+
+    }
+
     /* a simple perfect place  */
     .place-section {
         display: flex;
@@ -997,9 +1197,10 @@ hr {
 
     .newsletter-content {
         width: 350px;
-        
+
 
     }
+
     hr {
         width: 288px;
     }
@@ -1008,19 +1209,20 @@ hr {
     .news-pera {
         width: 288px;
     }
+
     .news-form input {
         margin-top: 16px;
         width: 288px;
         height: 52px;
         border-radius: 8px;
-        
+
     }
 
     .subscribe {
         margin-top: 38px;
         width: 288px;
         height: 52px;
-        
+
     }
 
     .newsletter-bgimg {
@@ -1046,77 +1248,81 @@ hr {
     .save-button {
         width: 200px;
         height: 80px;
-        
+
     }
 
     .btnsix-title {
         margin-top: 50px;
-        font-size: 14px; 
+        font-size: 14px;
     }
-    .btnone-title {   
+
+    .btnone-title {
         font-size: 20px;
-       
+
     }
+
     /* footer section  */
 
-        .earth-footer {
-            margin-left: 20px;
-            margin-top: 50px;
-            width: 400px;
-            height: 309px;
-            
-    
-        }
-        .footer-content img{
-            width: 28px;
-            height: 33px;
+    .earth-footer {
+        margin-left: 20px;
+        margin-top: 50px;
+        width: 400px;
+        height: 309px;
 
-        }
-    
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            margin-top: 110px;
-            margin-left: 40px;
-            margin-bottom: 0px;
-        }
-        .footer-titlle{
-            font-size: 20px;
-        }
-    
-        .footer-pera {
-            margin-top: 0%;
-            width: 288px;
-            text-align: center;
-            font-size: 14px;
-            margin-left: 30px;
-           
-        }
-    
-        .footer-icons {
-            margin-top: 0px;
-            margin-left: 50px;
-            text-align: center;
-            font-size: 1.5rem;
-            width: 274px;
-            height: 30px;
-        }
-    
-        .hr-line {
-            margin-top: 0px;   
-            width: 335px; 
-            margin-left: 10px;
-        }
-    
-        .rights {
-    
-            margin-top: 10px;
-            margin-left: 80px;
-            color: #131318;
-            font-size: 14px;
-            font-weight: 300;
-    
-        }
+
+    }
+
+    .footer-content img {
+        width: 28px;
+        height: 33px;
+
+    }
+
+    .footer-content {
+        display: flex;
+        justify-content: center;
+        margin-top: 110px;
+        margin-left: 40px;
+        margin-bottom: 0px;
+    }
+
+    .footer-titlle {
+        font-size: 20px;
+    }
+
+    .footer-pera {
+        margin-top: 0%;
+        width: 288px;
+        text-align: center;
+        font-size: 14px;
+        margin-left: 30px;
+
+    }
+
+    .footer-icons {
+        margin-top: 0px;
+        margin-left: 50px;
+        text-align: center;
+        font-size: 1.5rem;
+        width: 274px;
+        height: 30px;
+    }
+
+    .hr-line {
+        margin-top: 0px;
+        width: 335px;
+        margin-left: 10px;
+    }
+
+    .rights {
+
+        margin-top: 10px;
+        margin-left: 80px;
+        color: #131318;
+        font-size: 14px;
+        font-weight: 300;
+
+    }
 
 
 
